--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 
     <div id="conteneur">
         <header role="banner">
-            <h1>
-                <center>ADOUCISSEUR D 'EAU</center>
-            </h1>
+            <strong>
+            <center>ADOUCISSEUR D 'EAU</center>
+        </strong>
+
         </header>
         <marquee behavior="alternate">
             <right></right> PROMOTION JUSQU'AU 1ER SEPTEMBRE </right>
