--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="conteneur">
         <header role="banner">
             <strong>
-            <center>ADOUCISSEUR D 'EAU</center>
+            <center>ADOUCISSEURS D 'EAU</center>
         </strong>
 
         </header>
