--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 </head>
 
 
-<body role="document">
+<body>
 
 
 
     <div id="conteneur">
         <header role="banner">
 
-            <center><strong>ADOUCISSEURS D 'EAU</strong></center>
+            <h1><strong>ADOUCISSEURS D 'EAU</strong></h1>
 
 
         </header>
