--- a/index.html
+++ b/index.html
@@ -10,23 +10,25 @@
 
 
 
+<head>
+    <title></title>
 </head>
 
 
 <body>
 
 
-
+    <marquee behavior=" alternate ">
+        <right> PROMOTION JUSQU'AU 1ER SEPTEMBRE </right>
+    </marquee>
     <div id="conteneur">
-        <header role="banner">
+        <header>
 
             <h1><strong>ADOUCISSEURS D 'EAU</strong></h1>
 
 
         </header>
-        <marquee behavior="alternate">
-            <right></right> PROMOTION JUSQU'AU 1ER SEPTEMBRE </right>
-        </marquee>
+
         <nav id="menu" role="navigation">
             <ul>
                 <li> <a href="https://www.axal-salt.com/">SEL AXAL</a></li>
@@ -38,24 +40,23 @@
         </nav>
 
         <section>
-            <hgroup>
-                <h2> ADOUCISSEUR </h2>
-                <img src="image/adou.jpg" class="premier" alt="PHP" width="80" height="80" />
+
+            <h2> ADOUCISSEUR </h2>
+            <img src="image/adou.jpg" class="premier" alt="PHP" width="80" height="80" />
 
 
-
-            </hgroup>
         </section>
 
         <section id="content">
             <h2>PRODUITS</h2>
             <div id="entete">
+                <table>
 
-                <img src="image/accessoires.jpg" alt="PHP" width="120" height="80" />
-                <img src="image/emmoinstall.jpg" alt="paysage" width="150" height="80" />
-                <img src="image/emmopub.jpg" alt="flore" width="150" height="80" />
-                <img src="image/selaxial.png" alt="flore" width="150" height="80" />
-
+                    <tr><img src="image/accessoires.jpg" alt="PHP" width="120" height="80" />
+                        <img src="image/emmoinstall.jpg" alt="paysage" width="150" height="80" /></tr>
+                    <tr> <img src="image/emmopub.jpg" alt="flore" width="150" height="80" />
+                        <img src="image/selaxial.png" alt="flore" width="150" height="80" /></tr>
+                </table>
             </div>
             <section id="contenu">
 
