--- a/index.html
+++ b/index.html
@@ -1,32 +1,27 @@
 <!DOCTYPE html>
 <html lang="fr-FR" dir="ltr">
 
-
-<meta charset="UTF-8" />
-<meta name=viewport content="width=device-width, maximum-scale=1.0, user-scalable=no" />
-<link rel="stylesheet" href="index.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
-/>
-
-
-
 <head>
-    <title></title>
+    <meta charset="UTF-8" />
+    <meta name=viewport content="width=device-width, maximum-scale=1.0, user-scalable=no" />
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
+
+
+
+
+    <title>Main Page</title>
 </head>
 
+<marquee behavior=" alternate ">
+    <right> PROMOTION JUSQU'AU 1ER SEPTEMBRE </right>
+</marquee>
 
 <body>
-
-
-    <marquee behavior=" alternate ">
-        <right> PROMOTION JUSQU'AU 1ER SEPTEMBRE </right>
-    </marquee>
     <div id="conteneur">
         <header>
-
             <h1><strong>ADOUCISSEURS D 'EAU</strong></h1>
-
-
         </header>
 
         <nav id="menu" role="navigation">
@@ -52,10 +47,16 @@
             <div id="entete">
                 <table>
 
-                    <tr><img src="image/accessoires.jpg" alt="PHP" width="120" height="80" />
-                        <img src="image/emmoinstall.jpg" alt="paysage" width="150" height="80" /></tr>
-                    <tr> <img src="image/emmopub.jpg" alt="flore" width="150" height="80" />
-                        <img src="image/selaxial.png" alt="flore" width="150" height="80" /></tr>
+                    <tr>
+                        <td><img src="image/accessoires.jpg" alt="PHP" width="120" height="80" /></td>
+                        <td><img src="image/emmoinstall.jpg" alt="paysage" width="150" height="80" /></td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img src="image/emmopub.jpg" alt="flore" width="150" height="80" /></td>
+                        <td>
+                            <img src="image/selaxial.png" alt="flore" width="150" height="80" /></td>
+                    </tr>
                 </table>
             </div>
             <section id="contenu">
