--- a/chantier.html
+++ b/chantier.html
@@ -7,6 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <title>Document</title>
+    <nav id="menu" role="navigation">
+        <ul>
+            <li> <a href="https://www.axal-salt.com/">SEL AXAL</a></li>
+            <li><a href="https://www.talassa.fr/emmo-le-nouveau-filtre-malin-pour-traiter-chez-soi-leau-du-robinet/">FILTRE SOUS EVIER </a></li>
+            <li><a href="devis.html" title="lien">DEVIS</a></li>
+            <li><a href="chantier.html">NOS CHANTIERS</a></li>
+
+        </ul>
+    </nav>
 </head>
 
 <body>
